--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,22 @@
-title: Sleek # your site title
-author: GitHub User
-email: your-email@domain.com # email for form submission, you also have to change it in _js/scripts.js
+title: Hello World # your site title
+author: Stanisław Kowański
+email: helloworld@f4dev.me # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hobbystyczny blog podróżniczy, od czasu do czasu, pisany przez
+  nastolatka wyjeżdżającego z rodzicami ;).
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://janczizikow.github.io/sleek" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+url: "http://hw.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
+#github_username: janczizikow # replace with your_github_username or comment to remove link from footer
+#instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 social:
-  name: Your Name
+  name: Stanisław Kowański
   links:
-    - https://twitter.com/BenBalter
-    - https://www.facebook.com/ben.balter
-    - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
+    - http://f4dev.me
+    - http://facebook.com/kajmaken
 
 disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+  #shortname:  # to enable comments replace with your_disqus_shortname
 
 # Build settings
 markdown: kramdown
